kubernetes/clusters/live/config/paperless/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-internal
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless-ngx"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "paperless-ngx.svg"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "paperless.${internal_domain}"
  rules:
    - backendRefs:
        - name: paperless
          port: 8000
